# 7zip-qt

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md
CPP/7zip/UI/Agent/: Agent.cpp  AgentOut.cpp  ArchiveFolderOut.cpp
CPP/7zip/UI/FileManager/: FSFolder.cpp  FSFolder.h  FSFolderCopy.cpp
CPP/7zip/UI/Qt/: CMakeLists.txt  ProgressSync.cpp  ProgressSync.h  QtCompressDialog.cpp  QtCompressDialog.h  QtCompressGUI.cpp  QtCompressGUI.h  QtCompressInfo.h  QtCompressMethods.h  QtCompressOptionsDialog.cpp  QtCompressOptionsDialog.h  QtCompressSettings.cpp  QtCompressSettings.h  QtExtractCallback.cpp  QtExtractCallback.h  QtExtractDialog.cpp  QtExtractDialog.h  QtExtractGUI.cpp  QtExtractGUI.h  QtExtractPrompts.cpp  QtExtractPrompts.h  QtExtractSettings.cpp  QtExtractSettings.h  QtHashGUI.cpp  QtHashGUI.h  QtHashMethodsDialog.cpp  QtHashMethodsDialog.h  QtHashResultsDialog.cpp  QtHashResultsDialog.h  QtLang.h  QtLangLoader.cpp  QtMemDialog.cpp  QtMemDialog.h  QtOpenArcError.cpp  QtOpenArcError.h  QtProgressDialog.cpp  QtProgressDialog.h  QtProgressThreadVirt.cpp  QtProgressThreadVirt.h  QtUpdateCallback.cpp  (+3 more)
CPP/7zip/UI/Qt/agent/: AgentLinuxCompat.cpp  AgentLinuxCompat.h  FmCompareCompat.cpp  WorkDirSettings.cpp  agent_browse_test.cpp  agent_delete_test.cpp
CPP/7zip/UI/Qt/fm/: ArchiveOpenHelper.cpp  ArchiveOpenHelper.h  FmIcons.cpp  FmIcons.h  FormatIcons.cpp  FormatIcons.h  QtArchiveBrowser.cpp  QtArchiveBrowser.h  QtArchiveOpenWorker.cpp  QtArchiveOpenWorker.h  QtArchiveUpdateCallback.cpp  QtArchiveUpdateCallback.h  QtBenchmarkDialog.cpp  QtBenchmarkDialog.h  QtFavorites.cpp  QtFavorites.h  QtFileManagerWindow.cpp  QtFileManagerWindow.h  QtFmActions.cpp  QtFmActions.h  QtFmSettings.cpp  QtFmSettings.h  QtFolderModel.cpp  QtFolderModel.h  QtFsBrowser.cpp  QtFsBrowser.h  QtFsDnd.cpp  QtFsDnd.h  QtFsOperations.cpp  QtFsOperations.h  QtLinkDialog.cpp  QtLinkDialog.h  QtOptionsDialog.cpp  QtOptionsDialog.h  QtPanel.cpp  QtPanel.h  QtPropertiesDialog.cpp  QtPropertiesDialog.h  QtSplitCombine.cpp  QtSplitCombine.h  (+6 more)
